--- a/vars/users.yml
+++ b/vars/users.yml
@@ -1,8 +1,8 @@
 ---
 users:
-  - name: user1
+  - name: user1-201
     aws_groups: "sacramento, fresno, indio"
-  - name: user2
+  - name: user2-201
     aws_groups: "losangeles, sanfrancisco, napa"
-  - name: user3
+  - name: user3-201
     aws_groups: "palmsprings, indio, sandiego"
